2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* gtk/glue/cellrenderer.c: Revert r59683, as it causes issues for
	overrides calling base.GetSize (), etc.

2006-05-03  Mike Kestner  <mkestner@novell.com>

	* gdk/Drawable.custom : remove manual DrawPoints impl.
	* gdk/Gdk.metadata : properly mark array and count params for
	Drawable.DrawPoints.

2006-05-02  Zac Bowling  <zac@zacbowling.com>

	* docs/en/Gdk/Drawable.xml
	* gdk/Drawable.custom
	* gdk/Gdk.metadata : Fix Drawable.DrawPoints points param signature.

2006-04-20  Peter Johanson  <peter@peterjohanson.com>

	* gtk/glue/cellrenderer.c: Make GetSize, Render, etc behave correctly
	for all cases. Fixes #77949.

2006-04-15  Zac Bowling	 <zac@zacbowling.com>
	
	* README.generator : Updated with link to GAPI guide on Wiki

2006-03-27  Mike Kestner  <mkestner@novell.com>

	* gnomevfs/MimeType.cs : remove string from all pinvoke sigs. now
	adheres to the const/non-const conventions specified in the vfs
	headers.  Fixes #77534.

2006-03-27  Mike Kestner  <mkestner@novell.com>

	* glib/ListBase.cs : deal with ownership of Opaque elements.
	* glib/Marshaller.cs : add a hack to deal with Opaque ownership in
	ListToArray marshaling.

2006-02-28  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.* : update for 2.x.2 releases.

2006-02-28  Mike Kestner  <mkestner@novell.com>

	* pango/Context.custom : use ReadIntPtr (ptr, offset) for 64 bit.
	* pango/FontFamily.custom : use ReadIntPtr (ptr, offset) for 64 bit.
	* pango/FontMap.custom : use ReadIntPtr (ptr, offset) for 64 bit.
	* pango/Layout.custom : use ReadIntPtr (ptr, offset) for 64 bit.

2006-02-28  Mike Kestner  <mkestner@novell.com>

	* gdk/Region.custom : 64 bit fix for ptr arithmetic. [Fixes #77658]

Tue Feb 28 09:44:23 CET 2006 Paolo Molaro <lupus@ximian.com>

	* gdk/Pixbuf.custom: use correct type for buffer_size in
	gdk_pixbuf_save_to_bufferv() (fixes bug# 77662).

2006-02-16  Mike Kestner  <mkestner@novell.com>
